# SunsteadHack

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  context.md  docker-compose.yml  pyproject.toml  requirements-runtime.txt
.claude-plugin/: marketplace.json
2026-06-23_100-bond-sample-takehome/: cat_allocations.csv  data_dictionary.xlsx  geo_allocations.csv  impacts.csv  issuances.csv
agentcore/: README.md
arctal_dq_agent/: README.md  conftest.py  diag_llm.py  pyproject.toml
arctal_dq_agent/agent/: __init__.py  checks.py  data.py  finding.py  reasoning.py  review.py  run.py  trail.py
arctal_dq_agent/examples/: REPORT.md  findings.jsonl
arctal_dq_agent/examples_llm/: REPORT.md  findings.jsonl
arctal_dq_agent/tests/: test_checks.py  test_trail.py
bonds_instrument/: README.md  __init__.py  __main__.py  agents.py  candidates.py  claims.py  data.py  instrument.py  judge.py  mcp_server.py  runner.py
cleanroom/: README.md  types.py
deploy/: cloudflared-config.yml  sunstead-healthcheck.service  sunstead-healthcheck.timer  sunstead-webhook.service
docs/: aiven_agentic_org.md  aiven_mcp_notes.md  bend-graph-v2.html  bend-graph-v2.md  bend-graph.html  bend-graph.md  bonds-instrument-spec.md  byo-agent-vertical.md  dashboard-auth.md  dashboard-handoff.md  deep-probe-report.md  deep-probe.html  deploy-agentcore.md  deploy-aws.md  domain-onboarding.md  gate-1-findings.md  homeserver-deployment.md  live-curve.html  manifesto-proof.html  manifesto-proof.md  manifesto.md  membrane-crossdomain.md  membrane-trial.md  model-axis-posterior.html  model-axis-posterior.md  model-axis-region.html  model-axis-region.md  new_aiven_agentic_org.md  solution-directions.md  storyf-drift-curve.md  strategy.html  takehome-agent-brief.md  temp.md
frontend/: .env.local.example  .gitignore  auth.ts  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
plugin/: .mcp.json  .mcp.local.json  .mcp.remote.json  README.md  __init__.py  manifest.json
proposer-container/: Dockerfile  aiven-ca.pem  propose-entrypoint.sh  readonly-pg.mcp.json  seed.sql
scripts/: analyze_deep_probe.py  apply_grants.py  cognito_presignup_autoconfirm.py  cognito_pretoken_lambda.py  demo_loop.py  deploy.sh  drift_sweep.py  eval_membrane.py  eval_membrane_crossdomain.py  eval_membrane_v2.py  fit_membrane.py  healthcheck.sh  model_axis_posterior.py  provision_control_roles.py  record_judgment.py  render_bend_graph.py  render_bend_graph_v2.py  render_model_axis.py  run_agent_selfimprove_curve.py  run_arctal_byo_curve.py  run_byo_agent_curve.py  run_deep_probe.py  run_drift_sweep.py  run_job_curve.py  run_model_axis_region.py  run_phase1_curve.py  setup_cognito.sh  setup_cognito_dashboard.sh  stage_membrane_unit.py  (+5 more)
sunsteadcontrol/app/sunstead_control/: README.md  main.py  pyproject.toml
(+225 files in other folders)
