[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cleanroom"
version = "0.1.0"
description = "Phase-0 cleanroom autoresearch system — frozen contract surface for async teammates"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
proposer = [
    "anthropic>=0.40",
]
control = [
    # Operator MCP server for the Claude Code plugin (Story D). Imported lazily by
    # cleanroom/control/server/mcp.py so the package installs/imports without it.
    "mcp>=1.0",
]
server = [
    # Deployment-grade remote serving (Story G): streamable-HTTP transport + OAuth 2.1
    # resource server. All imported lazily by cleanroom/control/server/http_app.py.
    "mcp>=1.0",
    "uvicorn>=0.30",
    "starlette>=0.40",
    "pyjwt[crypto]>=2.8",   # RS256 access-token validation against the IdP's JWKS
    "httpx>=0.27",          # JWKS fetch (via pyjwt's PyJWKClient)
]

[tool.hatch.build.targets.wheel]
packages = ["cleanroom"]

[tool.pytest.ini_options]
markers = [
    "golden: tests that hit the real Anthropic API",
]
