[project]
name = "arctal-dq-agent"
version = "0.1.0"
description = "Green-bond data-quality agent: re-derive, flag, correct, escalate."
requires-python = ">=3.10"
# Tier 0 + trail re-derivation use the standard library only. The LLM tier is
# opt-in, so `anthropic` is an extra rather than a hard dependency.
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8"]

[project.scripts]
arctal-dq-agent = "agent.run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
