[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sunstead_control"
version = "0.1.0"
description = "AgentCore MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp >= 1.19.0",
    "starlette >= 0.40",
    "uvicorn >= 0.30",
    "pyjwt[crypto] >= 2.8",
    "psycopg[binary] >= 3.1.0",
    "numpy >= 1.24.0",
    "boto3 >= 1.34",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
